--- a/CvCameraPreview/android/app/src/main/res/values/styles.xml
+++ b/CvCameraPreview/android/app/src/main/res/values/styles.xml
@@ -2,7 +2,10 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>    
     </style>
 
 </resources>
